2010-05-10 by jvandervort
  * Added the recipe summary location setting.  You can now put the summary in a block.
  * #325733 by rnavarette, added separated input formats to allow for wysiwyg formatting.

Apr 28 20:58:10 2010 by jvandervort
  * Moved content array population to recipe_view where it belongs.  This caused a recipe template update as well.

Wed Apr 21 18:49:48 2010 UTC by jvandervort
  * #776884, fivestar formatting fix.

Wed Mar 31 19:29:15 2010 UTC by jvandervort
  * use typed case for ingredient names if there is a registered trademark symbol somewhere in the name.

Wed Mar 31 16:51:59 2010 UTC by jvandervort
  * #188203, Added a yield unit text field to the recipe table.

2010-03-31 jvandervort
  * restyled ingredient index to match name index.

2010-03-29 jvandervort
  * default recipe admin screen should be the settings page.
  * added help text to the bulk import and export pages.

2010-03-26 jvandervort
  * add user friendly message when there are no bulk import/export formats available.

2010-03-22 jvandervort
  * added recipe name index page.

2010-03-17 jvandervort
  * added template for html export.

2010-03-16 jvandervort
  * straightening out recipe theming.  added a node-recipe.tpl file.

2010-03-15 jvandervort
  * wrap plaintext ingredients that are too long.
  * wrap plaintext ingredients that are too long.
  * strip html from mastercook4 export data.
  * wrap mastercook4 ingredients that are too long.
  * print ingredient fractions and wordwrap plaintext export data.

2010-03-10 jvandervort
    * translate 3x5 pdf headings.
    * 3"x5" pdf output formatting tweak.

2010-03-09 jvandervort
  * sanitize output from ingredient note.
  * allow limited html in ingredient names to support things like &reg;
  * new admin setting to make all ingredients lowercase when new ingredients are added.
  * rudimentary 3"x5" pdf output support for single recipes.

2010-03-08 jvandervort