@@ -18,16 +18,11 @@
 .recipe-summary th {
   background: #eee;
 }
-#edit-submit, #edit-reset, #edit-halve, #edit-double {
-  font-size: 75%;
-  width: 7em;
-  float:right;
-}
 #edit-custom-yield-wrapper {
   display: inline;
 }
 .summary-data, .summary-title {
-	width: 10em;
+  width: 10em;
 }
 .recipe-summary p {
   margin:0;
@@ -69,8 +64,10 @@
   display: inline;
 }
 
-#recipe_custom_yield fieldset .form-submit {
-  display: inline;
+.recipe-summary .form-submit {
+  font-size: 75%;
+  width: 7em;
+  float:right;
 }
 
 #recipe_custom_yield fieldset {
