@@ -1,3 +1,8 @@
+2010-05-12 by jvandervort
+  * Single recipe import should use "normal" preview function, not its own mini one.
+  * Preview ingredient quantities were not showing fractions.
+  * Recipe edit screen ingredient quantities had a leading space sometimes.
+
 2010-05-10 by jvandervort
   * Added the recipe summary location setting.  You can now put the summary in a block.
   * #325733 by rnavarette, added separated input formats to allow for wysiwyg formatting.
